--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,5 +1,14 @@
-# Source: https://raw.githubusercontent.com/foundry-rs/foundry/master/.github/workflows/docker-publish.yml
-name: docker
+# This workflow is used to build and publish docker images for the proof servers
+# of our Light Clients. It is triggered manually and requires the user to provide
+# the Light Client and the version of the image to be published.
+#
+# The workflow can be triggered here: https://github.com/argumentcomputer/zk-light-clients/actions/workflows/docker-publish.yml
+#
+# The workflow is configured to run on the latest version of Ubuntu, and it uses
+# the `docker/build-push-action` action to build the image and push it to the
+# GitHub Container Registry. The image is tagged with the Light Client and the
+# version provided by the user.
+name: Create and publish a Docker image
 
 on:
   workflow_dispatch:
@@ -7,76 +16,95 @@ on:
       light-client:
         description: 'aptos or ethereum'
         type: choice
+        required: true
         options:
           - aptos
           - ethereum
+      version:
+        description: "Image version"
+        required: true
+        type: string
 
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+  packages: write
+
+# Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: "ghcr.io"
+  NAMESPACE: "argumentcomputer"
+  IMAGE_NAME: "proof-server"
+# There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
-  container:
+  build-and-push-image:
     runs-on: ubuntu-latest
-    # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
+    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
-      id-token: write
-      packages: write
       contents: read
-    timeout-minutes: 120
+      packages: write
+      attestations: write
+      id-token: write
+      #
     steps:
       - name: Checkout repository
-        id: checkout
         uses: actions/checkout@v4
 
-      - name: Install Docker BuildX
+      # Set up Docker Buildx for better layer caching
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        id: buildx
+      # Use Docker layer caching for faster builds
+      - name: Cache Docker layers
+        uses: actions/cache@v3
         with:
-          install: true
-
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
-        # Ensure this doesn't trigger on PR's
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.REPO_TOKEN }}
-
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
+          password: ${{ secrets.GITHUB_TOKEN }}
+      # This step uses [docker/metadata-action](https://github.com/docker/metadata-action#about) to extract tags and labels that will be applied to the specified image. The `id` "meta" allows the output of this step to be referenced in a subsequent step. The `images` value provides the base name for the tags and labels.
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
-          images: "argumentcomputer/${{ inputs.light-client }}"
-
+          images: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE_NAME }}
       # Creates an additional 'latest'
       - name: Finalize Docker Metadata
         id: docker_tagging
         run: |
           echo "Neither scheduled nor manual release from main branch. Just tagging as branch name"
-          echo "docker_tags=argumentcomputer/${{ inputs.light-client }}:${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-
+          echo "docker_tags=${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ inputs.light-client }}-proof-server:${{inputs.version}}" >> $GITHUB_OUTPUT
       # Log docker metadata to explicitly know what is being pushed
       - name: Inspect Docker Metadata
         run: |
           echo "TAGS -> ${{ steps.docker_tagging.outputs.docker_tags }}"
           echo "LABELS ->  ${{ steps.meta.outputs.labels }}"
-
-      # Build and push Docker image
-      # https://github.com/docker/build-push-action
-      # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md
+      # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
+      # It uses the `context` parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the `docker/build-push-action` repository.
+      # It uses the `tags` and `labels` parameters to tag and label the image with the output from the "meta" step.
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        id: push
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: ${{ steps.docker_tagging.outputs.docker_tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
           build-args: |
             LIGHT_CLIENT=${{ inputs.light-client }}
+          tags: ${{ steps.docker_tagging.outputs.docker_tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      # This step generates an artifact attestation for the image, which is an unforgeable statement about where and how it was built. It increases supply chain security for people who consume the image. For more information, see the "[attestation docs](https://docs.github.com/en/actions/security-for-github-actions/using-artifact-attestations/using-artifact-attestations-to-establish-provenance-for-builds)."
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ inputs.light-client }}-proof-server
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
