--- a/docker/eksctl/cluster-config.yml
+++ b/docker/eksctl/cluster-config.yml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: my-cluster
+  name: proof-server
   region: us-west-2
 
 nodeGroups:
