--- a/docker/compose/docker-compose-proof-servers.yml
+++ b/docker/compose/docker-compose-proof-servers.yml
@@ -1,9 +1,24 @@
 services:
   server-primary:
-    image: ghcr.io/argumentcomputer/ethereum-proof-server:latest
-    command: sh -c "/app/proof_server --mode \"single\" --addr ${PRIMARY_ADDR}:${PRIMARY_PORT}"
+    build:
+      context: ../..
+      dockerfile: docker/Dockerfile
+    command: sh -c "/app/proof_server --mode "split" --addr ${PRIMARY_ADDR}:${PRIMARY_PORT} --snd-addr server-secondary:${SECONDARY_PORT}"
+    environment:
+      - RUST_LOG=debug
+    restart: always
+    depends_on:
+      - server-secondary
+    ports:
+      - "${PRIMARY_PORT}:${PRIMARY_PORT}"
+
+  server-secondary:
+    build:
+      context: ../..
+      dockerfile: docker/Dockerfile
+    command: sh -c "/app/proof_server --mode "single" --addr ${SECONDARY_ADDR}:${SECONDARY_PORT}"
     environment:
       - RUST_LOG=debug
     restart: always
     ports:
-      - "${PRIMARY_PORT}:${PRIMARY_PORT}"
+      - "${SECONDARY_PORT}:${SECONDARY_PORT}"
